# archivedon

./: .gitignore  Cargo.toml  LICENSE.Apache-2.0.txt  LICENSE.md  README.md
.github/workflows/: release.yml  test.yml
src/: lib.rs  main.rs  main_fetch.rs  main_server.rs
src/activitypub/: actor.rs  collection.rs  context.rs  featured.rs  featured_tags.rs  followers.rs  following.rs  json.rs  mod.rs  model.rs  outbox.rs  typ.rs
src/cmd/: serve.rs
src/cmd/serve/: mod.rs  webfinger.rs
src/data/: user.rs
src/env/: mod.rs
src/fetch/: activitypub.rs  input.rs  mod.rs  output.rs  resource.rs  templates.rs  webfinger.rs
src/fetch/env/: mod.rs
src/helper/: mod.rs  url_helper.rs
src/nodeinfo/: mod.rs
src/path_helper/: mod.rs
src/redirect_map/: mod.rs
src/resource_path/: mod.rs
src/server/: mod.rs
src/server/cmd/: serve.rs
src/server/env/: mod.rs
src/server/handler/: mod.rs  nodeinfo.rs  redirect_map.rs  webfinger.rs
src/webfinger/: resource.rs
tests/: main.rs
tests/activitypub/: actor.rs  collection.rs  context.rs  mod.rs  model.rs  outbox.rs  typ.rs
tests/webfinger/: resource.rs
