[package]
name = "archivedon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
warp = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "archivedon"

[[test]]
name = "main"
path = "tests/main.rs"
