[package]
name = "archivedon"
authors = ["Mizunashi Mana <contact@mizunashi.work>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
warp = { version = "0.3", features = ["tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.2", default-features = false, features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

[[bin]]
name = "archivedon"
path = "src/main_server.rs"

[[bin]]
name = "archivedon-fetch"
path = "src/main_fetch.rs"

[[test]]
name = "main"
path = "tests/main.rs"
